2021-11-17  Alex Christensen  <achristensen@webkit.org>

        Enable adattributiond testing on iOS simulator
        https://bugs.webkit.org/show_bug.cgi?id=233285

        Reviewed by Brady Eidson.

        * TestWebKitAPI/Tests/WebKitCocoa/EventAttribution.mm:
        (TestWebKitAPI::testDaemonPList):
        (TestWebKitAPI::cleanUpDaemon):
        (TestWebKitAPI::TEST):

2021-11-17  Ryan Haddad  <ryanhaddad@apple.com>

        ASSERT NOT REACHED under WebKit::Daemon::ConnectionToMachService seen with TestWebKitAPI.WebPushD.BasicCommunication and PermissionManagement
        https://bugs.webkit.org/show_bug.cgi?id=232857

        Unreviewed test gardening.

        * TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm:
        (TestWebKitAPI::TEST): Disable the tests for Monterey.

2021-11-16  Ryan Haddad  <ryanhaddad@apple.com>

        [macOS Debug] TestWebKitAPI.WKInspectorExtensionDelegate.InspectedPageNavigatedCallbacks is timing out
        https://bugs.webkit.org/show_bug.cgi?id=231847

        Unreviewed test gardening.

        * TestWebKitAPI/Tests/WebKitCocoa/WKInspectorExtensionDelegate.mm: Disable test in the debug configuration.

2021-11-17  Zixing Liu  <liushuyu011@gmail.com>

        [GTK][WPE] Support getting and setting HTTP headers in custom URI scheme handlers
        https://bugs.webkit.org/show_bug.cgi?id=203273

        Reviewed by Carlos Garcia Campos.

        * TestWebKitAPI/Tests/WebKitGLib/TestWebKitWebContext.cpp:
        (testWebContextURIScheme): Added a new test to test getting and setting HTTP headers in custom URI scheme handlers

2021-11-16  Jonathan Bedard  <jbedard@apple.com>

        [webkitscmpy] Load secrets in kubernetes
        https://bugs.webkit.org/show_bug.cgi?id=233158
        <rdar://problem/85433499>

        Reviewed by Dewei Zhu.

        * Scripts/libraries/webkitcorepy/setup.py: Bump version.
        * Scripts/libraries/webkitcorepy/webkitcorepy/__init__.py: Bump version, export Environment.